--- a/index.html
+++ b/index.html
@@ -1,28 +1,48 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Google</title>
+
+    <style>
+        .btnstyle {
+            height: 40px;
+            width: 100px;
+            background-color:blueviolet ;
+            font-size: medium;
+        }
+        .btnstyles{
+            height: 70px;
+            width: 150px;
+            background-color:blueviolet ;
+            font-size: medium;
+
+        }
+    </style>
 </head>
+
 <body>
     <div>
-        <div>
-           <button type="button">Gmail</button>
-           <button type="button">Images</button>
-           <button type="button">...</button>
-           <button type="button">sign in</button>
+        <div style="float: right;">
+            <button type="button" class="btnstyle">Gmail</button>
+            <button type="button"class="btnstyle">Images</button>
+            <button type="button"class="btnstyle">...</button>
+            <button type="button"class="btnstyle">sign in</button>
         </div>
         <div>
-            <img src="yo.png" >
-            <button type="button">Google search</button>
-            <button type="button">I'am feeling lucky</button>
+            <img src="yo.png" style="width: 40%;height: 300px; margin-left: 30%; margin-top: 10%;"><br>
+           
+            <button type="button" class="btnstyles" style="position: relative; margin-left: 50%; ">Google search</button> &nbsp;&nbsp;
+            <button type="button" class="btnstyles" >I'am feeling lucky</button>
 
         </div>
         <div>
             Footer
         </div>
     </div>
-      
+
 </body>
+
 </html>
